Fixed scrollbar issue in "Expert"

--- a/themes/grav/scss/template/_editor.scss
+++ b/themes/grav/scss/template/_editor.scss
@@ -7,6 +7,7 @@
     .CodeMirror-scroll {
         margin-right: -36px;
         padding-bottom: 36px;
+        position: static;
     }
 
     .grav-editor-resizer {
